adding admin files

--- a/shared/style.css
+++ b/shared/style.css
@@ -2,7 +2,7 @@ body {
 }
 #wrapper {
 	margin: 0 100px;
-	background-color: #aaff88;
+	background-color: #ADCF75;
 	height: auto;
 	min-height: 100% !important;
 }
