--- a/admin/main.css
+++ b/admin/main.css
@@ -14,6 +14,10 @@ body {
 	font-size: 24px;
 }
 
+#controls > button {
+	margin: auto;
+}
+
 .popup-outer-wrapper {
 	display: none;
 	position: absolute;
